src/test/deca/codegen/valid/without_class/no_initialization.deca
// Description:
// 	  Teste la décompilation pour une déclaration de variable sans initialisation
// Resultats:
// 	  
//
// Historique:
// 	  cree le 13/01/2023
{
    int x;
}